--- a/Team Maverick/BackEnd/TaskManagement/src/main/resources/application.properties
+++ b/Team Maverick/BackEnd/TaskManagement/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.datasource.password = Jitesh@2001
 
 #JPA and Hibernate
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto= none
+spring.jpa.hibernate.ddl-auto= update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
